<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:id="@+id/almanac_root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/almanac_cover_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0"
        android:background="@color/colorAccent" />

    <Button
        android:id="@+id/almanac_animation_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/almanac"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TableLayout
        android:id="@+id/table_almanac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:shrinkColumns="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow android:id="@+id/table_almanac_gregorian_calendar_row">

            <TextView
                android:id="@+id/tv_almanac_solar_calendar_key"
                style="@style/almanac_key"
                android:text="@string/solar_calendar" />

            <TextView
                android:id="@+id/tv_almanac_solar_calendar_value"
                style="@style/almanac_value"
                tool:text="@string/long_text_example" />

        </TableRow>

        <TableRow android:id="@+id/table_almanac_lunar_calendar_row">

            <TextView
                android:id="@+id/tv_almanac_lunar_calendar_key"
                style="@style/almanac_key"
                android:text="@string/lunar_calendar" />

            <TextView
                android:id="@+id/tv_almanac_lunar_calendar_value"
                style="@style/almanac_value" />

        </TableRow>

        <TableRow android:id="@+id/table_almanac_five_elements_row">

            <TextView
                android:id="@+id/tv_almanac_five_elements_key"
                style="@style/almanac_key"
                android:text="@string/five_elements" />

            <TextView
                android:id="@+id/tv_almanac_five_elements_value"
                style="@style/almanac_value" />

        </TableRow>

        <TableRow android:id="@+id/table_almanac_offense_row">

            <TextView
                android:id="@+id/tv_almanac_offense_key"
                style="@style/almanac_key"
                android:text="@string/offense" />

            <TextView
                android:id="@+id/tv_almanac_offense_value"
                style="@style/almanac_value" />

        </TableRow>

        <TableRow android:id="@+id/table_almanac_forbiddance_row">

            <TextView
                android:id="@+id/tv_almanac_forbiddance_key"
                style="@style/almanac_key"
                android:text="@string/forbiddance" />

            <TextView
                android:id="@+id/tv_almanac_forbiddance_value"
                style="@style/almanac_value" />

        </TableRow>

        <TableRow android:id="@+id/table_almanac_worship_row">

            <TextView
                android:id="@+id/tv_almanac_worship_key"
                style="@style/almanac_key"
                android:text="@string/worship" />

            <TextView
                android:id="@+id/tv_almanac_worship_value"
                style="@style/almanac_value" />

        </TableRow>

        <TableRow android:id="@+id/table_almanac_sacrifice_of_gods_row">

            <TextView
                android:id="@+id/tv_almanac_sacrifice_Of_gods_key"
                style="@style/almanac_key"
                android:text="@string/sacrifice_of_gods" />

            <TextView
                android:id="@+id/tv_almanac_sacrifice_of_gods_value"
                style="@style/almanac_value" />

        </TableRow>

        <TableRow android:id="@+id/table_almanac_benefits_row">

            <TextView
                android:id="@+id/tv_almanac_benefits_key"
                style="@style/almanac_key"
                android:text="@string/benefits" />

            <TextView
                android:id="@+id/tv_almanac_Benefits_value"
                style="@style/almanac_value" />

        </TableRow>

        <TableRow android:id="@+id/table_almanac_drawbacks_row">

            <TextView
                android:id="@+id/tv_almanac_drawbacks_key"
                style="@style/almanac_key"
                android:text="@string/drawbacks" />

            <TextView
                android:id="@+id/tv_almanac_drawbacks_value"
                style="@style/almanac_value" />

        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>